# isee

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
code/: CMakeLists.txt
code/application/: CMakeLists.txt  iapp.c  iapp.h
code/component/: CMakeLists.txt
code/component/aoi/: aoi.c
code/component/machinelearning/: ideeplearning.c  ideeplearning.h
code/component/media/image/: READEME.md  iapng.c  iapng.h  ibpg.c  ibpg.h  iimage.c  iimage.h  ipng.c  ipng.h  ivp8x.c  ivp8x.h  iwebp.c  iwebp.h
code/foundation/: CMakeLists.txt  iatomic.c  imemory.c  imemorystatistics.c  imemorystatistics.h  imeta.c  imeta.h  imetatypes.h  imutex.c  imutex.h  iobj.c  iobj.h  iobjcache.c  iobjcache.h  iplatform.c  itype.h
code/foundation/algorithm/: iconsistent.c  iconsistent.h  ilamport.c  ilamport.h  ipass.c  ipass.h  ipaxos.c  ipaxos.h  iquorum.c  iquorum.h  iraft.c  iraft.h
code/foundation/container/: READEME.md  iarray.c  iarray.h  idict.c  idict.h  iheap.c  iheap.h  ineighbor.c  ineighbor.h  irefcache.c  irefcache.h  ireflist.c  ireflist.h  islice.c  islice.h  itree.c  itree.h
code/foundation/core/: imacro.h  imeta.c  imeta.define.inl  imeta.h  imeta.imp.inl  imetatypes.h  iobj.c  iobj.h  iobjcache.c  iobjcache.h  irawtype.c  irawtype.h  iref.c  iref.h  irefcache.c  irefcache.h  ireflist.c  ireflist.h  iruntime.c  iruntime.h  ivar.c  ivar.h  iwref.c  iwref.h
code/foundation/math/: icircle.c  icircle.h  iline.c  iline.h  imat.c  imat.h  imath.c  imath.h  imd5.c  imd5.h  iplane.c  iplane.h  ipolygon.c  ipolygon.h  ipos.c  ipos.h  iquat.c  iquat.h  irand.c  irand.h  irect.c  irect.h  isize.c  isize.h  ivec.c  ivec.h
code/foundation/memory/: READEME.md  imalloc.c  imalloc.h  imemory.c  imemory.h  imemoryprofile.c  imemoryprofile.h  imemorystatistics.c  imemorystatistics.h
code/foundation/platform/: iatomic.c  iatomic.h  ientry.h  imutex.c  iplatform.c  iplatform.h
code/foundation/runtime/: READEME.md  iasynevent.c  iasynevent.h  iasynio.c  iasynio.h  idefer.c  idefer.h  igeneration.c  igeneration.h  igoroutine.c  igoroutine.h  imarksweep.c  imarksweep.h  iselect.c  iselect.h
code/foundation/util/: iarraytypes.c  iarraytypes.h  ibase64.c  ibase64.h  icmdarg.c  icmdarg.h  idefer.c  idefer.h  idicttypes.c  idicttypes.h  iendian.c  iendian.h  ikvcache.c  ikvcache.h  ikvmemcache.c  ikvmemcache.h  iradix.c  iradix.h  iregex.c  iregex.h  iringbuffer.c  iringbuffer.h  istring.c  istring.h  iutf8.c  iutf8.h
code/graphics/: CMakeLists.txt  igraphics.c  igraphics.h
depends/: CMakeLists.txt
depends/glad/: CMakeLists.txt
depends/glfw/: CMakeLists.txt
depends/glfw/src/: cocoa_init.m  cocoa_joystick.m  cocoa_monitor.m  nsgl_context.m
doc/: tpl.h
doc/compiler/: READEME.md  lex.yy.c  main.x  node.h  parse.y  tokens.l
example/: CMakeLists.txt
example/01simplewindow/: CMakeLists.txt  main.c
example/04gui/: Makefile  main.c
test/: CMakeLists.txt  main.c  main.cpp
test/foundation/: test_iarray.h  test_iarraytypes.h  test_iatomic.h  test_ibase64.h  test_icircle.h  test_icmdarg.h  test_iconsistent.h  test_idict.h  test_iendian.h  test_ientry.h  test_iheap.h  test_ikvmemcache.h  test_iline.h  test_imacro.h  test_imat.h  test_imath.h  test_imemory.h  test_imemorystatistic.h  test_imeta.h  test_imutex.h  test_ineighbor.h  test_iobj.h  test_iobjcache.h  test_iplane.h  test_iplatform.h  test_ipolygon.h  test_ipos.h  test_iquat.h  test_iradix.h  test_irect.h  test_iref.h  test_irefcache.h  test_ireflist.h  test_iringbuffer.h  test_isize.h  test_islice.h  test_istring.h  test_itree.h  test_iutf8.h  test_ivar.h  (+2 more)
